--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Download Button</title>
   </head>
   <body>
-    <button class="download-btn">
+    <button class="download-btn" data-timer="5">
       <i class="icon fa-solid fa-download"></i>
       <span class="text">Download Files</span>
     </button>
